# focus-stacking

./: CMakeLists.txt  README.md  main.cpp  tests.cpp
src/: convolution_strategy.h  filter_kernel.cpp  filter_kernel.h  focus_stack.cpp  focus_stack.h  gaussian_kernel.cpp  gaussian_kernel.h  grayscale_converter.cpp  grayscale_converter.h  image_filter.cpp  image_filter.h  images_utils.cpp  images_utils.h  laplacian_kernel.cpp  laplacian_kernel.h  matrix.h  parallel_convolution_strategy.h  serial_convolution_strategy.h  shape.cpp  shape.h  test.cpp  test.h
test/: grayscale_converter_test.cpp  image_filter_test.cpp  matrix_test.cpp  testTest.cpp  test_utils.cpp  test_utils.h
